# kontext

./: .gitignore  README.md  golden.yaml  how-it-works.md  next-steps.md  pyproject.toml  readme.md  requirements.txt
bench/: .gitignore  readme.md  render_pages.py  run_bench.sh  score.py
bench/engines/: easyocr_engine.py  surya_engine.py  tesseract_engine.py
framework/: docvec.py  mongo.py  run.py  runtime.py  tools.py
framework/static/css/: micropsi-styles.css
framework/templates/: ask.tpl  boilerplate.tpl  dialogs.tpl  menu.tpl
src/: run.py  textparser.py
src/kontext/: __main__.py  catalog.py  cli.py  model.py
src/kontext/ingest/: clean.py  dedup.py  extractors.py  planner.py  runner.py
src/kontext/ocr/: __init__.py  engine.py  runner.py
src/kontext/search/: chunker.py  embedder.py  eval.py  query.py  store.py
src/kontext/survey/: db.py  estimates.py  probes.py  report.py  run.py  walker.py  worker.py
src/kontext/web/: __init__.py  app.py
src/kontext/web/templates/: index.html  results.html
src_old/: README.md  run.py
src_old/framework/: requirements.txt  run.py  runtime.py
src_old/framework/static/js/: dialogs.js  monitor.js  nodenet.js
src_old/framework/templates/: about.tpl  list.tpl  loader.tpl
tests/: conftest.py  test_dedup.py  test_eval.py  test_extractors.py  test_ingest_e2e.py  test_ocr.py  test_planner_heuristics.py  test_probes.py  test_search.py  test_survey_e2e.py  test_web.py
