[project]
name = "kontext"
version = "0.1.0"
description = "find context in a personal ebook library"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "typer>=0.12",
    "rich>=13",
    "py3langid>=0.3",
    "datasketch>=2.0.0",
]

[project.scripts]
kontext = "kontext.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
