[project]
name = "kontext"
version = "0.1.0"
description = "find context in a personal ebook library"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "typer>=0.12",
    "rich>=13",
    "py3langid>=0.3",
    "datasketch>=2.0.0",
    "torch>=2.6",
    "sentence-transformers>=3.3",
    "qdrant-client>=1.12",
    "pyyaml>=6",          # golden-set eval
    "fastapi>=0.115",     # phase 3 web app
    "uvicorn>=0.30",      # asgi server for `kontext serve`
    "jinja2>=3.1",        # server-rendered ui templates
]

[project.scripts]
kontext = "kontext.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

# torch must come from the cu126 wheel line: it still ships sm_50 kernels
# for the titan x (maxwell). default pypi wheels target newer gpus only.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
